# wedevx

./: DESIGN.md  README.md  USER_GUIDE.md  app.py  asgi.py  auth.py  config.py  database.py  email_service.py  gunicorn_conf.py  main_flask.py  models.py  pyproject.toml  requirements.txt  schemas.py  wsgi.py
routers/: auth.py  leads.py
styling/: scripts.js  styles.css
templates/: base.html  dashboard.html  lead_details.html  lead_form.html  lead_management.html  login.html
